--- a/Standard/Submission vers 1.0/OMG_OntoIOp_current.tex
+++ b/Standard/Submission vers 1.0/OMG_OntoIOp_current.tex
@@ -183,6 +183,22 @@
 %% Captions of tables and figures are supposed to be Arial 10pt bold
 \usepackage[font={normalsize, bf, sf}]{caption}
 
+% The following is used in order to resize the Annex titles 
+\renewcommand{\makeannexhead}[1]{%
+  \centerline{{\sffamily\fontsize{18pt}{18pt}\bfseries #1 }}
+  \vskip 0.5\baselineskip
+}
+
+
+
+\renewcommand{\makepreannexhead}[1]{%
+  \begin{center}
+  {{\sffamily\fontsize{18pt}{18pt}\bfseries \annexname~ \theannex }\\  \Large{\sffamily #1}}
+  \end{center}
+}
+
+
+
 
 
 %% Utilities
@@ -630,6 +646,8 @@ author=,date=,id=,replyto=,type=}{}%
 
 
 
+
+
 \usepackage{afterpage}
 
 \newcommand\blankpage{%
@@ -654,6 +672,8 @@ author=,date=,id=,replyto=,type=}{}%
 
 
 
+
+
 \begin{document}
 
 \nocite{OM2014,JYB-Festschrift2015-DOL,womo13,DOL-TKE2012,DOL-3semantics,blendingc3gi12,hyper2010}
@@ -667,7 +687,12 @@ author=,date=,id=,replyto=,type=}{}%
 % \end{flushright}
 
 \begin{center}
-	  \textbf{An OMG\rtm Distributed Ontology, Modeling, and Specification Language\tm Publication}
+
+{\sffamily \upshape \fontsize{10}{10}\selectfont \bfseries
+An OMG\rtm Distributed Ontology, Modeling, and Specification Language\tm Publication
+}
+
+% \textbf{\small{An OMG\rtm Distributed Ontology, Modeling, and Specification Language\tm Publication}}
 \end{center}
 
 \medskip
@@ -744,11 +769,11 @@ Informative Machine Consumable Files:\\
 
 
 \pagenumbering{gobble}% Remove page numbers (and reset to 1)
+
 \thispagestyle{empty}
 \clearpage
-
 \pagenumbering{roman}
-
+\addtocounter{page}{1}
 
 \noindent Copyright \copyright 2014-18, Object Management Group, Inc.\\
 Copyright \copyright 2014-17, Fraunhofer FOKUS\\
