geometry adjusted, no preliminaries

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -70,8 +70,8 @@
 \pagestyle{fancy}
 %\fancyhead[LO,RE]{}
 %\fancyhead[RO,LE]{}
-\fancyfoot[LO,RE]{\iffloatpage{}{\scriptsize{\textsf{Distributed Ontology, Modeling, and Specification Language (DOL), Version 1.0}}}}
-\fancyfoot[RO,LE]{\iffloatpage{\thepage}{\thepage}}
+% \fancyfoot[LO,RE]{\iffloatpage{}{\scriptsize{\textsf{Distributed Ontology, Modeling, and Specification Language (DOL), Version 1.0}}}}
+% \fancyfoot[RO,LE]{\iffloatpage{\thepage}{\thepage}}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 %\renewcommand{\headrulewidth}{\iffloatpage{0pt}{0.4pt}}
@@ -87,7 +87,8 @@
                 \vspace*{\fill}
                 \hfill
                 \begin{center}
-                This page intentionally left blank.
+					
+%                This page intentionally left blank.
                 \end{center}
                 \vspace{\fill}
                 \thispagestyle{empty}
@@ -671,8 +672,8 @@ author=,date=,id=,replyto=,type=}{}%
 \allowdisplaybreaks
 
 
-
-
+%\usepackage[text={12.3cm,19.3cm},centering]{geometry}
+\usepackage[text={12.3cm,19.3cm}]{geometry}
 
 \begin{document}
 
@@ -735,7 +736,7 @@ The Distributed Ontology, Modeling, and Specification Language\tm
 \leaders\vrule width \textwidth\vskip0.5pt %%% or other desired thickness
 \vskip 6pt
 \nointerlineskip
-\begin{doublespace}
+
 \sffamily
 \begin{tabbing}
 OMG Document Number: \qquad \= formal/2018-04-01    \\
@@ -750,7 +751,7 @@ Informative Machine Consumable Files:\\
 \url{http://www.omg.org/spec/DOL/20171106/DOL-terms-ODM.xml} \\
 
  \end{tabbing}
-\end{doublespace}
+
 
 \vskip 6pt
 \leaders\vrule width \textwidth\vskip0.5pt % or other desired thickness
@@ -774,178 +775,178 @@ Informative Machine Consumable Files:\\
 \clearpage
 \pagenumbering{roman}
 \addtocounter{page}{1}
-
-\noindent Copyright \copyright 2014-18, Object Management Group, Inc.\\
-Copyright \copyright 2014-17, Fraunhofer FOKUS\\
-Copyright \copyright 2014-17, MITRE\\
-Copyright \copyright 2014-17, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
-Copyright \copyright 2014-17, Thematix Partners LLC \\
-Copyright \copyright 2014-17, Athan Services \\
-
-
-
-\OMGparagraph{USE OF SPECIFICATION - TERMS, CONDITIONS \& NOTICES}
-The material in this document details an Object Management Group specification in accordance with the terms, conditions and notices set forth below. This document does not represent a commitment to implement any portion of this specification in any company's products. The information contained in this document is subject to change without notice.
-
-
-\OMGparagraph{LICENSES}
-The companies listed above have granted to the Object Management Group, Inc. (OMG) a nonexclusive, royalty-free, paid up, worldwide license to copy and distribute this document and to modify this document and distribute copies of the modified version. Each of the copyright holders listed above has agreed that no person shall be deemed to have infringed the copyright in the included material of any such copyright holder by reason of having used the specification set forth herein or having conformed any computer software to the specification.
-
-\medskip
-Subject to all of the terms and conditions below, the owners of the copyright in this specification hereby grant you a fully-paid up, non-exclusive, nontransferable, perpetual, worldwide license (without the right to sublicense), to use this specification to create and distribute software and special purpose specifications that are based upon this specification, and to use, copy, and distribute this specification as provided under the Copyright Act; provided that: (1) both the copyright notice identified above and this permission notice appear on any copies of this specification; (2) the use of the specifications is for informational purposes and will not be copied or posted on any network computer or broadcast in any media and will not be otherwise resold or transferred for commercial purposes; and (3) no modifications are made to this specification. This limited permission automatically terminates without notice if you breach any of these terms or conditions. Upon termination, you will destroy immediately any copies of the specifications in your possession or control.
-
-
-
-
-\OMGparagraph{PATENTS}
-The attention of adopters is directed to the possibility that compliance with or adoption of OMG specifications may require use of an invention covered by patent rights. OMG shall not be responsible for identifying patents for which a license may be required by any OMG specification, or for conducting legal inquiries into the legal validity or scope of those patents that are brought to its attention. OMG specifications are prospective and advisory only. Prospective users are responsible for protecting themselves against liability for infringement of patents.
-
-
-\OMGparagraph{GENERAL USE RESTRICTIONS}
-Any unauthorized use of this specification may violate copyright laws, trademark laws, and communications regulations and statutes. This document contains information which is protected by copyright. All Rights Reserved. No part of this work covered by copyright herein may be reproduced or used in any form or by any means--graphic, electronic, or mechanical, including photocopying, recording, taping, or information storage and retrieval systems--without permission of the copyright owner.
-
-
-\newpage
-\OMGparagraph{DISCLAIMER OF WARRANTY}
-WHILE THIS PUBLICATION IS BELIEVED TO BE ACCURATE, IT IS PROVIDED "AS IS" AND MAY CONTAIN ERRORS OR MISPRINTS. THE OBJECT MANAGEMENT GROUP AND THE COMPANIES LISTED ABOVE MAKE NO WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, WITH REGARD TO THIS PUBLICATION, INCLUDING BUT NOT LIMITED TO ANY WARRANTY OF TITLE OR OWNERSHIP, IMPLIED WARRANTY OF MERCHANTABILITY OR WARRANTY OF FITNESS FOR A PARTICULAR PURPOSE OR USE. IN NO EVENT SHALL THE OBJECT MANAGEMENT GROUP OR ANY OF THE COMPANIES LISTED ABOVE BE LIABLE FOR ERRORS CONTAINED HEREIN OR FOR DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, RELIANCE OR COVER DAMAGES, INCLUDING LOSS OF PROFITS, REVENUE, DATA OR USE, INCURRED BY ANY USER OR ANY THIRD PARTY IN CONNECTION WITH THE FURNISHING, PERFORMANCE, OR USE OF THIS MATERIAL, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
-
-\medskip
-The entire risk as to the quality and performance of software developed using this specification is borne by you. This disclaimer of warranty constitutes an essential part of the license granted to you to use this specification.
-
-
-\OMGparagraph{RESTRICTED RIGHTS LEGEND}
-Use, duplication or disclosure by the U.S. Government is subject to the restrictions set forth in
- subparagraph (c) (1) (ii) of The Rights in Technical Data and Computer Software Clause at DFARS
-  252.227-7013 or in subparagraph (c)(1) and (2) of the Commercial Computer Software - Restricted
-   Rights clauses at 48 C.F.R. 52.227-19 or as specified in 48 C.F.R. 227-7202-2 of the DoD F.A.R.
-    Supplement and its successors, or as specified in 48 C.F.R. 12.212 of the Federal Acquisition
- Regulations and its successors, as applicable. The specification copyright owners are as
- indicated above and may be contacted through the Object Management Group, 109 Highland
- Avenue, Needham, MA 02494, U.S.A.
-
-
-
-\OMGparagraph{TRADEMARKS}
-
-C\rtm, CORBA\rtm, CORBA logos\rtm, FIBO\rtm, Financial Industry Business Ontology\rtm, FINANCIAL INSTRUMENT GLOBAL IDENTIFIER\rtm,  IIOP\rtm, IMM\rtm, Model Driven Architecture\rtm, MDA\rtm, Object Management Group\rtm, OMG\rtm, OMG Logo\rtm, SoaML\rtm, SOAML\rtm, SysML\rtm, UAF\rtm, Unified Modeling Language\rtm, UML\rtm, UML Cube logo\rtm, VSIPL\rtm, and XMI\rtm are registered trademarks of the Object Management Group, Inc.
-
-For a complete list of trademarks, see: \url{http://www.omg.org/legal/tm_list.htm}. All other products or company names mentioned are used for identification purposes only, and may be trademarks of their respective owners.
-
-\OMGparagraph{COMPLIANCE}
-The copyright holders listed above acknowledge that the Object Management Group (acting itself or through its designees) is and shall at all times be the sole entity that may authorize developers, suppliers and sellers of computer software to use certification marks, trademarks or other special designations to indicate compliance with these materials.
-Software developed under the terms of this license may claim compliance or conformance with this specification if and only if the software compliance is of a nature fully matching the applicable compliance points as stated in the specification. Software developed only partially matching the applicable compliance points may claim only that the software was based on this specification, but may not claim compliance or conformance with this specification. In the event that testing suites are implemented or approved by Object Management Group, Inc., software developed using this specification may claim compliance or conformance with the specification only if the software satisfactorily completes the testing suites.
-
-
-
-
-\newpage
-\OMGparagraph{\textbf{OMG's Issue Reporting Procedure}}
-All OMG specifications are subject to continuous review and improvement. As part of this process we encourage readers to report any ambiguities, inconsistencies, or inaccuracies they may find by completing the Issue Reporting Form listed on the main web page \url{http://www.omg.org}, under Documents, Report a Bug/Issue. % \newline(\url{http://www.omg.org/report_issue.htm})
-
-% \newpage
-% $ $
-% \newpage
-
-\clearpage
-
-
-\renewcommand{\contentsname}{Table of Contents}
-\tableofcontents
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\cleardoublepage
-\clause*{Preface}
-\addcontentsline{toc}{clause}{Preface}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\sclause*{OMG}
-\addcontentsline{toc}{sclause}{OMG}
-
-Founded in 1989, the Object Management Group, Inc. (OMG) is an open membership, not-for-profit
-computer industry standards consortium that produces and maintains computer industry specifications
-for interoperable, portable, and reusable enterprise applications in distributed, heterogeneous
-environments. Membership includes Information Technology vendors, end users, government agencies,
- and academia.
-
-OMG member companies write, adopt, and maintain its specifications following a mature, open
- process. OMG's specifications implement the Model Driven Architecture\textregistered \xspace
- (MDA\textregistered\xspace), maximizing ROI
-  through a full-lifecycle approach to enterprise integration that covers multiple operating
-   systems, programming languages, middleware and networking infrastructures, and software
-    development environments. OMG's specifications include: UML\textregistered\xspace (Unified Modeling Language\texttrademark\xspace);
-	 CORBA\textregistered\xspace (Common Object Request Broker Architecture); CWM\texttrademark\xspace (Common Warehouse Metamodel); and
-	  industry-specific standards for dozens of vertical markets.
-
-
-More information on the OMG is available at \url{http://www.omg.org/}.
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\sclause*{OMG Specifications}
-\addcontentsline{toc}{sclause}{OMG Specifications}
-
-
-As noted, OMG specifications address middleware, modeling and vertical domain frameworks. All OMG Specifications are available from the OMG website at:\newline
-\url{http://www.omg.org/spec}
 %
-% \noindent Specifications are organized by the following categories:
-% \textbf{
-% \begin{itemize}[leftmargin=*, label={}, topsep=0pt]
-% 	\item  Business Modeling Specifications
-% 	\item Middleware Specifications
-% 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
-% 		\item CORBA/IIOP
-% 		\item Data Distribution Services
-% 		\item Specialized CORBA
-% 	\end{itemize}
-% 	\item IDL/Language Mapping Specifications
-% 	\item Modeling and Metadata Specifications
-% 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
-% 		\item UML, MOF, CWM, XMI
-% 		\item UML Profile
-% 	\end{itemize}
-% 	\item Modernization Specifications
-% 	\item Platform Independent Model (PIM), Platform Specific Model (PSM), Interface Specifications
-% 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
-% 		\item CORBAServices
-% 		\item CORBAFacilities
-% 	\end{itemize}
-% 	\item OMG Domain Specifications
-% 	\item CORBA Embedded Intelligence Specifications
-% 	\item CORBA Security Specifications
-% \end{itemize}
-% }
-
-\medskip
-\noindent
-All of OMG's formal specifications may be downloaded without charge from our website. (Products implementing OMG specifications are available from
- individual suppliers.) Copies of specifications, available in PostScript and
- PDF format, may be obtained from the Specifications Catalog cited above or by contacting the Object Management Group, Inc. at:
-
-
-
-\medskip
-\noindent
-OMG Headquarters \\
-109 Highland Avenue \\
-Needham, MA 02494 \\
-USA\\
-Tel: +1-781-444-0404\\
-Fax: +1-781-444-0320\\
-Email: \url{pubs@omg.org}\\
-
-\noindent Certain OMG specifications are also available as ISO standards. Please consult \url{http://www.iso.org}.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \noindent Copyright \copyright 2014-18, Object Management Group, Inc.\\
+% Copyright \copyright 2014-17, Fraunhofer FOKUS\\
+% Copyright \copyright 2014-17, MITRE\\
+% Copyright \copyright 2014-17, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
+% Copyright \copyright 2014-17, Thematix Partners LLC \\
+% Copyright \copyright 2014-17, Athan Services \\
+%
+%
+%
+% \OMGparagraph{USE OF SPECIFICATION - TERMS, CONDITIONS \& NOTICES}
+% The material in this document details an Object Management Group specification in accordance with the terms, conditions and notices set forth below. This document does not represent a commitment to implement any portion of this specification in any company's products. The information contained in this document is subject to change without notice.
+%
+%
+% \OMGparagraph{LICENSES}
+% The companies listed above have granted to the Object Management Group, Inc. (OMG) a nonexclusive, royalty-free, paid up, worldwide license to copy and distribute this document and to modify this document and distribute copies of the modified version. Each of the copyright holders listed above has agreed that no person shall be deemed to have infringed the copyright in the included material of any such copyright holder by reason of having used the specification set forth herein or having conformed any computer software to the specification.
+%
+% \medskip
+% Subject to all of the terms and conditions below, the owners of the copyright in this specification hereby grant you a fully-paid up, non-exclusive, nontransferable, perpetual, worldwide license (without the right to sublicense), to use this specification to create and distribute software and special purpose specifications that are based upon this specification, and to use, copy, and distribute this specification as provided under the Copyright Act; provided that: (1) both the copyright notice identified above and this permission notice appear on any copies of this specification; (2) the use of the specifications is for informational purposes and will not be copied or posted on any network computer or broadcast in any media and will not be otherwise resold or transferred for commercial purposes; and (3) no modifications are made to this specification. This limited permission automatically terminates without notice if you breach any of these terms or conditions. Upon termination, you will destroy immediately any copies of the specifications in your possession or control.
+%
+%
+%
+%
+% \OMGparagraph{PATENTS}
+% The attention of adopters is directed to the possibility that compliance with or adoption of OMG specifications may require use of an invention covered by patent rights. OMG shall not be responsible for identifying patents for which a license may be required by any OMG specification, or for conducting legal inquiries into the legal validity or scope of those patents that are brought to its attention. OMG specifications are prospective and advisory only. Prospective users are responsible for protecting themselves against liability for infringement of patents.
+%
+%
+% \OMGparagraph{GENERAL USE RESTRICTIONS}
+% Any unauthorized use of this specification may violate copyright laws, trademark laws, and communications regulations and statutes. This document contains information which is protected by copyright. All Rights Reserved. No part of this work covered by copyright herein may be reproduced or used in any form or by any means--graphic, electronic, or mechanical, including photocopying, recording, taping, or information storage and retrieval systems--without permission of the copyright owner.
+%
+%
+% \newpage
+% \OMGparagraph{DISCLAIMER OF WARRANTY}
+% WHILE THIS PUBLICATION IS BELIEVED TO BE ACCURATE, IT IS PROVIDED "AS IS" AND MAY CONTAIN ERRORS OR MISPRINTS. THE OBJECT MANAGEMENT GROUP AND THE COMPANIES LISTED ABOVE MAKE NO WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, WITH REGARD TO THIS PUBLICATION, INCLUDING BUT NOT LIMITED TO ANY WARRANTY OF TITLE OR OWNERSHIP, IMPLIED WARRANTY OF MERCHANTABILITY OR WARRANTY OF FITNESS FOR A PARTICULAR PURPOSE OR USE. IN NO EVENT SHALL THE OBJECT MANAGEMENT GROUP OR ANY OF THE COMPANIES LISTED ABOVE BE LIABLE FOR ERRORS CONTAINED HEREIN OR FOR DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, RELIANCE OR COVER DAMAGES, INCLUDING LOSS OF PROFITS, REVENUE, DATA OR USE, INCURRED BY ANY USER OR ANY THIRD PARTY IN CONNECTION WITH THE FURNISHING, PERFORMANCE, OR USE OF THIS MATERIAL, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
+%
+% \medskip
+% The entire risk as to the quality and performance of software developed using this specification is borne by you. This disclaimer of warranty constitutes an essential part of the license granted to you to use this specification.
+%
+%
+% \OMGparagraph{RESTRICTED RIGHTS LEGEND}
+% Use, duplication or disclosure by the U.S. Government is subject to the restrictions set forth in
+%  subparagraph (c) (1) (ii) of The Rights in Technical Data and Computer Software Clause at DFARS
+%   252.227-7013 or in subparagraph (c)(1) and (2) of the Commercial Computer Software - Restricted
+%    Rights clauses at 48 C.F.R. 52.227-19 or as specified in 48 C.F.R. 227-7202-2 of the DoD F.A.R.
+%     Supplement and its successors, or as specified in 48 C.F.R. 12.212 of the Federal Acquisition
+%  Regulations and its successors, as applicable. The specification copyright owners are as
+%  indicated above and may be contacted through the Object Management Group, 109 Highland
+%  Avenue, Needham, MA 02494, U.S.A.
+%
+%
+%
+% \OMGparagraph{TRADEMARKS}
+%
+% C\rtm, CORBA\rtm, CORBA logos\rtm, FIBO\rtm, Financial Industry Business Ontology\rtm, FINANCIAL INSTRUMENT GLOBAL IDENTIFIER\rtm,  IIOP\rtm, IMM\rtm, Model Driven Architecture\rtm, MDA\rtm, Object Management Group\rtm, OMG\rtm, OMG Logo\rtm, SoaML\rtm, SOAML\rtm, SysML\rtm, UAF\rtm, Unified Modeling Language\rtm, UML\rtm, UML Cube logo\rtm, VSIPL\rtm, and XMI\rtm are registered trademarks of the Object Management Group, Inc.
+%
+% For a complete list of trademarks, see: \url{http://www.omg.org/legal/tm_list.htm}. All other products or company names mentioned are used for identification purposes only, and may be trademarks of their respective owners.
+%
+% \OMGparagraph{COMPLIANCE}
+% The copyright holders listed above acknowledge that the Object Management Group (acting itself or through its designees) is and shall at all times be the sole entity that may authorize developers, suppliers and sellers of computer software to use certification marks, trademarks or other special designations to indicate compliance with these materials.
+% Software developed under the terms of this license may claim compliance or conformance with this specification if and only if the software compliance is of a nature fully matching the applicable compliance points as stated in the specification. Software developed only partially matching the applicable compliance points may claim only that the software was based on this specification, but may not claim compliance or conformance with this specification. In the event that testing suites are implemented or approved by Object Management Group, Inc., software developed using this specification may claim compliance or conformance with the specification only if the software satisfactorily completes the testing suites.
+%
+%
+%
+%
+% \newpage
+% \OMGparagraph{\textbf{OMG's Issue Reporting Procedure}}
+% All OMG specifications are subject to continuous review and improvement. As part of this process we encourage readers to report any ambiguities, inconsistencies, or inaccuracies they may find by completing the Issue Reporting Form listed on the main web page \url{http://www.omg.org}, under Documents, Report a Bug/Issue. % \newline(\url{http://www.omg.org/report_issue.htm})
+%
+% % \newpage
+% % $ $
+% % \newpage
+%
+% \clearpage
+%
+%
+% \renewcommand{\contentsname}{Table of Contents}
+% \tableofcontents
+%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% \cleardoublepage
+% \clause*{Preface}
+% \addcontentsline{toc}{clause}{Preface}
+%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%
+% \sclause*{OMG}
+% \addcontentsline{toc}{sclause}{OMG}
+%
+% Founded in 1989, the Object Management Group, Inc. (OMG) is an open membership, not-for-profit
+% computer industry standards consortium that produces and maintains computer industry specifications
+% for interoperable, portable, and reusable enterprise applications in distributed, heterogeneous
+% environments. Membership includes Information Technology vendors, end users, government agencies,
+%  and academia.
+%
+% OMG member companies write, adopt, and maintain its specifications following a mature, open
+%  process. OMG's specifications implement the Model Driven Architecture\textregistered \xspace
+%  (MDA\textregistered\xspace), maximizing ROI
+%   through a full-lifecycle approach to enterprise integration that covers multiple operating
+%    systems, programming languages, middleware and networking infrastructures, and software
+%     development environments. OMG's specifications include: UML\textregistered\xspace (Unified Modeling Language\texttrademark\xspace);
+% 	 CORBA\textregistered\xspace (Common Object Request Broker Architecture); CWM\texttrademark\xspace (Common Warehouse Metamodel); and
+% 	  industry-specific standards for dozens of vertical markets.
+%
+%
+% More information on the OMG is available at \url{http://www.omg.org/}.
+%
+%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%
+% \sclause*{OMG Specifications}
+% \addcontentsline{toc}{sclause}{OMG Specifications}
+%
+%
+% As noted, OMG specifications address middleware, modeling and vertical domain frameworks. All OMG Specifications are available from the OMG website at:\newline
+% \url{http://www.omg.org/spec}
+% %
+% % \noindent Specifications are organized by the following categories:
+% % \textbf{
+% % \begin{itemize}[leftmargin=*, label={}, topsep=0pt]
+% % 	\item  Business Modeling Specifications
+% % 	\item Middleware Specifications
+% % 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
+% % 		\item CORBA/IIOP
+% % 		\item Data Distribution Services
+% % 		\item Specialized CORBA
+% % 	\end{itemize}
+% % 	\item IDL/Language Mapping Specifications
+% % 	\item Modeling and Metadata Specifications
+% % 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
+% % 		\item UML, MOF, CWM, XMI
+% % 		\item UML Profile
+% % 	\end{itemize}
+% % 	\item Modernization Specifications
+% % 	\item Platform Independent Model (PIM), Platform Specific Model (PSM), Interface Specifications
+% % 	\begin{itemize}[ label={-}, topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
+% % 		\item CORBAServices
+% % 		\item CORBAFacilities
+% % 	\end{itemize}
+% % 	\item OMG Domain Specifications
+% % 	\item CORBA Embedded Intelligence Specifications
+% % 	\item CORBA Security Specifications
+% % \end{itemize}
+% % }
+%
+% \medskip
+% \noindent
+% All of OMG's formal specifications may be downloaded without charge from our website. (Products implementing OMG specifications are available from
+%  individual suppliers.) Copies of specifications, available in PostScript and
+%  PDF format, may be obtained from the Specifications Catalog cited above or by contacting the Object Management Group, Inc. at:
+%
+%
+%
+% \medskip
+% \noindent
+% OMG Headquarters \\
+% 109 Highland Avenue \\
+% Needham, MA 02494 \\
+% USA\\
+% Tel: +1-781-444-0404\\
+% Fax: +1-781-444-0320\\
+% Email: \url{pubs@omg.org}\\
+%
+% \noindent Certain OMG specifications are also available as ISO standards. Please consult \url{http://www.iso.org}.
+%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %
@@ -989,17 +990,17 @@ Email: \url{pubs@omg.org}\\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\sclause*{Issues}
-\addcontentsline{toc}{sclause}{Issues}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-The reader is encouraged to report any technical or editing issues/problems
- with this specification by completing the Issue Reporting Form listed on the main web page \url{http://www.omg.org}, under Documents, Report a Bug/Issue.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
+%
+%
+% \sclause*{Issues}
+% \addcontentsline{toc}{sclause}{Issues}
+%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%
+% The reader is encouraged to report any technical or editing issues/problems
+%  with this specification by completing the Issue Reporting Form listed on the main web page \url{http://www.omg.org}, under Documents, Report a Bug/Issue.
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1007,7 +1008,7 @@ The reader is encouraged to report any technical or editing issues/problems
 
 
 %\setcounter{clause}{-1}
-\cleardoublepage
+% \cleardoublepage
 
 
 
