--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -671,9 +671,10 @@ author=,date=,id=,replyto=,type=}{}%
 
 \allowdisplaybreaks
 
-
+% For Habil
 %\usepackage[text={12.3cm,19.3cm},centering]{geometry}
 \usepackage[text={12.3cm,19.3cm}]{geometry}
+
 
 \begin{document}
 
