fix page numbering

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -770,12 +770,12 @@ Informative Machine Consumable Files:\\
 
 
 
-\pagenumbering{gobble}% Remove page numbers (and reset to 1)
-
-\thispagestyle{empty}
-\clearpage
-\pagenumbering{roman}
-\addtocounter{page}{1}
+% \pagenumbering{gobble}% Remove page numbers (and reset to 1)
+%
+% \thispagestyle{empty}
+% \clearpage
+% \pagenumbering{roman}
+% \addtocounter{page}{1}
 %
 % \noindent Copyright \copyright 2014-18, Object Management Group, Inc.\\
 % Copyright \copyright 2014-17, Fraunhofer FOKUS\\
